// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndemniteCCn /> should render error 1`] = `
.c1 {
  margin-bottom: 1.6rem;
  padding: 1rem 2rem;
  color: #3e486e;
  background-color: #f2f5fa;
  border: 1px solid transparent;
  border-radius: 0.6rem;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

<div>
  <h2
    class="c0"
  >
    Indemnité de licenciement
  </h2>
  <div
    class="c1"
  >
    lorem ipsum
  </div>
  <p>
    Un accord d’entreprise, le contrat de travail ou un usage peuvent prévoir un montant plus favorable pour le salarié. Dans ce cas, le montant dû est le montant le plus favorable pour le salarié.
  </p>
</div>
`;

exports[`<IndemniteCCn /> should render results with highlight on indemnité conventionnelle 1`] = `
.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

.c1 {
  color: #3e486e;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: nowrap;
}

.c8 {
  margin-bottom: 1.6rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c5 {
  width: calc(50% * 0.021);
  background-color: #7598d6;
  border-radius: 0.6rem;
}

.c13 {
  width: calc(50% * 1);
  background-color: #7598d6;
  border-radius: 0.6rem;
}

.c6 {
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.8rem;
}

.c7 {
  margin-top: 2rem;
}

.c9 {
  font-weight: bold;
  font-size: 1.4rem;
}

.c10 {
  list-style-type: disc;
}

.c11 {
  font-size: 1.4rem;
}

.c12 {
  margin: 1.6rem 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin: 0.4rem;
  font-weight: 700;
  font-size: 1.6rem;
}

@media (max-width:980px) {
  .c4 {
    -webkit-flex-flow: wrap;
    -ms-flex-flow: wrap;
    flex-flow: wrap;
  }
}

@media (max-width:980px) {
  .c5 {
    width: calc(100% * 0.021);
  }
}

@media (max-width:980px) {
  .c13 {
    width: calc(100% * 1);
  }
}

@media (max-width:980px) {
  .c6 {
    width: 100%;
    margin-left: 0;
  }
}

<div>
  <h2
    class="c0"
  >
    Indemnité de licenciement
  </h2>
  <p>
    À partir des éléments que vous avez saisis, l’indemnité de licenciement est estimée à
     
    <strong
      class="c1"
    >
      2,000.00
       € brut
    </strong>
  </p>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <p>
    Il s’agit du montant le plus important entre l’indemnité légale et l’indemnité conventionnelle.
  </p>
  <div
    class="c2"
  >
    <div>
      <div
        class="c3"
      >
        Votre indemnite légale
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        />
        <span
          class="c6"
        >
          42.00
           € brut
        </span>
      </div>
      <details
        class="c7"
      >
        <summary
          class="c8"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c9"
        >
          Élements saisis :
        </strong>
        <ul
          class="c10"
        >
          <li
            class="c11"
          >
            salaire ref (Sref)
             : 
            42
          </li>
          <li
            class="c11"
          >
            anciennete (A)
             : 
            32
          </li>
        </ul>
        <strong
          class="c9"
        >
          Formule
        </strong>
        <div
          class="c12"
        >
          <div
            id="react-mathjax-preview"
          >
            <div
              id="react-mathjax-preview-result"
            >
              \`Sref * A\`
            </div>
          </div>
        </div>
      </details>
    </div>
    <div>
      <div
        class="c3"
      >
        Votre indemnite conventionnelle
      </div>
      <div
        class="c4"
      >
        <div
          class="c13"
        />
        <span
          class="c6"
        >
          2,000.00
           € brut
        </span>
      </div>
      <details
        class="c7"
      >
        <summary
          class="c8"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c9"
        >
          Élements saisis :
        </strong>
        <ul
          class="c10"
        >
          <li
            class="c11"
          >
            salaire de ref (Sref)
             : 
            1337
          </li>
          <li
            class="c11"
          >
            foo
             : 
            bar
          </li>
        </ul>
        <strong
          class="c9"
        >
          Formule
        </strong>
        <div
          class="c12"
        >
          <div
            id="react-mathjax-preview"
          >
            <div
              id="react-mathjax-preview-result"
            >
              \`1337 * Sref * foo\`
            </div>
          </div>
        </div>
      </details>
    </div>
  </div>
  <p>
    Un accord d’entreprise, le contrat de travail ou un usage peuvent prévoir un montant plus favorable pour le salarié. Dans ce cas, le montant dû est le montant le plus favorable pour le salarié.
  </p>
</div>
`;

exports[`<IndemniteCCn /> should render results with highlight on indemnité legale 1`] = `
.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

.c1 {
  color: #3e486e;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: nowrap;
}

.c8 {
  margin-bottom: 1.6rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c5 {
  width: calc(50% * 1);
  background-color: #7598d6;
  border-radius: 0.6rem;
}

.c13 {
  width: calc(50% * 0.5348);
  background-color: #7598d6;
  border-radius: 0.6rem;
}

.c6 {
  margin-left: 1.6rem;
  color: #4d73b8;
  font-size: 1.8rem;
}

.c7 {
  margin-top: 2rem;
}

.c9 {
  font-weight: bold;
  font-size: 1.4rem;
}

.c10 {
  list-style-type: disc;
}

.c11 {
  font-size: 1.4rem;
}

.c12 {
  margin: 1.6rem 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin: 0.4rem;
  font-weight: 700;
  font-size: 1.6rem;
}

@media (max-width:980px) {
  .c4 {
    -webkit-flex-flow: wrap;
    -ms-flex-flow: wrap;
    flex-flow: wrap;
  }
}

@media (max-width:980px) {
  .c5 {
    width: calc(100% * 1);
  }
}

@media (max-width:980px) {
  .c13 {
    width: calc(100% * 0.5348);
  }
}

@media (max-width:980px) {
  .c6 {
    width: 100%;
    margin-left: 0;
  }
}

<div>
  <h2
    class="c0"
  >
    Indemnité de licenciement
  </h2>
  <p>
    À partir des éléments que vous avez saisis, l’indemnité de licenciement est estimée à
     
    <strong
      class="c1"
    >
      2,500.00
       € brut
    </strong>
  </p>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <p>
    Il s’agit du montant le plus important entre l’indemnité légale et l’indemnité conventionnelle.
  </p>
  <div
    class="c2"
  >
    <div>
      <div
        class="c3"
      >
        Votre indemnite légale
      </div>
      <div
        class="c4"
      >
        <div
          class="c5"
        />
        <span
          class="c6"
        >
          2,500.00
           € brut
        </span>
      </div>
      <details
        class="c7"
      >
        <summary
          class="c8"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c9"
        >
          Élements saisis :
        </strong>
        <ul
          class="c10"
        >
          <li
            class="c11"
          >
            salaire ref (Sref)
             : 
            42
          </li>
          <li
            class="c11"
          >
            anciennete (A)
             : 
            32
          </li>
        </ul>
        <strong
          class="c9"
        >
          Formule
        </strong>
        <div
          class="c12"
        >
          <div
            id="react-mathjax-preview"
          >
            <div
              id="react-mathjax-preview-result"
            >
              \`Sref * A\`
            </div>
          </div>
        </div>
      </details>
    </div>
    <div>
      <div
        class="c3"
      >
        Votre indemnite conventionnelle
      </div>
      <div
        class="c4"
      >
        <div
          class="c13"
        />
        <span
          class="c6"
        >
          1,337.00
           € brut
        </span>
      </div>
      <details
        class="c7"
      >
        <summary
          class="c8"
        >
          Voir le détail du calcul
        </summary>
        <strong
          class="c9"
        >
          Élements saisis :
        </strong>
        <ul
          class="c10"
        >
          <li
            class="c11"
          >
            salaire de ref (Sref)
             : 
            1337
          </li>
          <li
            class="c11"
          >
            foo
             : 
            bar
          </li>
        </ul>
        <strong
          class="c9"
        >
          Formule
        </strong>
        <div
          class="c12"
        >
          <div
            id="react-mathjax-preview"
          >
            <div
              id="react-mathjax-preview-result"
            >
              \`1337 * Sref * foo\`
            </div>
          </div>
        </div>
      </details>
    </div>
  </div>
  <p>
    Un accord d’entreprise, le contrat de travail ou un usage peuvent prévoir un montant plus favorable pour le salarié. Dans ce cas, le montant dû est le montant le plus favorable pour le salarié.
  </p>
</div>
`;
